<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="prgMongoDb" Id="{b742ddc1-e283-4c02-9825-1a3363326113}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM prgMongoDb
VAR
	{attribute clr [ReadOnly()]}
	{attribute clr [CompilerOmits("BuilderPlainer")]}
	{attribute clr [RenderIgnore()]}
	_logStart : ULINT;
	{attribute clr [RenderIgnore()]}
	{attribute clr [CompilerOmits("BuilderPlainer")]}
	_logDone : ULINT;
	
	_data : structMongoData;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[_data.CycleCount := TwinCAT_SystemInfoVarList._TaskInfo[1].CycleCount;
_data.CycleTime := TwinCAT_SystemInfoVarList._TaskInfo[1].CycleTime;
_data.LastExecTime := TwinCAT_SystemInfoVarList._TaskInfo[1].LastExecTime;

IF(_data.Maximum < _data.LastExecTime) THEN _data.Maximum := _data.LastExecTime; END_IF;
IF(_data.Minimum > _data.LastExecTime) THEN _data.Minimum := _data.LastExecTime; END_IF;

IF(_logStart <= _logDone) THEN 
	_logStart := _logStart + 1;	
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="prgMongoDb">
      <LineId Id="15" Count="9" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>